alignment fixes and mobile responsiveness

--- a/src/components/Container/Container.styles.css
+++ b/src/components/Container/Container.styles.css
@@ -1,16 +1,16 @@
 .section {
-  width: max-content;
+  max-width: 550px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  align-self: center;
-  align-content: center;
   padding: 0;
   margin-top: 15vh;
+  padding: 2rem;
 }
 
 .row {
+  max-width: 550px;
   display: flex;
   flex-direction: row;
 }
